# jules-mcp

./: .gitignore  README.md  client.py  main.py  models.py  pyproject.toml
